# pm

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
backend/: AGENTS.md  pyproject.toml
backend/app/: ai_client.py  board_defaults.py  db.py  main.py
backend/app/routers/: __init__.py  ai.py  auth.py  board.py  health.py
backend/app/static/: index.html
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_boards.py  test_health.py  test_migration.py  test_smoke.py
docs/: DATABASE.md  PLAN.md  code_review.md
frontend/: AGENTS.md  next.config.ts  package.json  playwright.integration.config.ts
frontend/src/components/: AIChatSidebar.test.tsx  AIChatSidebar.tsx  AuthGate.test.tsx  AuthGate.tsx  BoardSelector.test.tsx  BoardSelector.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanCardPreview.tsx  KanbanColumn.tsx  NewCardForm.tsx
frontend/src/lib/: api.ts  kanban.ts
frontend/tests/: kanban.spec.ts
frontend/tests-integration/: persistence.spec.ts
scripts/: AGENTS.md  start.bat  start.ps1  start.sh
