[project]
name = "pm-backend"
version = "0.1.0"
description = "Backend service for the Project Management MVP"
requires-python = ">=3.12"
dependencies = [
  "bcrypt>=4.3.0",
  "fastapi>=0.121.1",
  "httpx>=0.28.1",
  "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
